--- a/eco_model/configuration.json
+++ b/eco_model/configuration.json
@@ -1,6 +1,6 @@
 {
     "Data": {
-        "Database": "postgres: flood_damage_costs on localhost",
+        "Database": "postgres: xflood_damage_costs on localhost",
         "Parametertable": "fdc_admin.parametre",
 		"Parameterkeyfield" : "name",
 		"Parametervaluefield" : "value",
