--- a/OS2DamageCost/Makefile
+++ b/OS2DamageCost/Makefile
@@ -38,15 +38,15 @@ LOCALES =
 # translation
 SOURCES = \
 	__init__.py \
-	flood_damage_cost.py flood_damage_cost_dockwidget.py
+	OS2DamageCost.py OS2DamageCost_dockwidget.py
 
-PLUGINNAME = flood_damage_cost
+PLUGINNAME = OS2DamageCost
 
 PY_FILES = \
 	__init__.py \
-	flood_damage_cost.py flood_damage_cost_dockwidget.py
+	OS2DamageCost.py OS2DamageCost_dockwidget.py
 
-UI_FILES = flood_damage_cost_dockwidget_base.ui
+UI_FILES = OS2DamageCost_dockwidget_base.ui
 
 EXTRAS = metadata.txt icon.png
 
