--- a/OS2DamageCost/pb_tool.cfg
+++ b/OS2DamageCost/pb_tool.cfg
@@ -39,7 +39,7 @@
 [plugin]
 # Name of the plugin. This is the name of the directory that will
 # be created in .qgis2/python/plugins
-name: flood_damage_cost
+name: OS2DamageCost
 
 # Full path to where you want your plugin directory copied. If empty,
 # the QGIS default path will be used. Don't include the plugin name in
@@ -48,10 +48,10 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py flood_damage_cost.py flood_damage_cost_dockwidget.py
+python_files: __init__.py OS2DamageCost.py OS2DamageCost_dockwidget.py
 
 # The main dialog file that is loaded (not compiled)
-main_dialog: flood_damage_cost_dockwidget_base.ui
+main_dialog: OS2DamageCost_dockwidget_base.ui
 
 # Other ui files for dialogs you create (these will be compiled)
 compiled_ui_files: 
